add service provider endpoint
